--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Build Firmware
+        uses: justgook/qmk-build@v1
         with:
           keymap-path: "keyboards/idobao/id75/keymaps/justgook"
           keyboard: "idobao/id75/v1"
